# LangGraph

./: -Syed-Arham-Hasan.env  .gitignore  pyproject.toml
Basic Chatbot/: chatbot.py
Chatbot with UI/: chatbot-Syed-Arham-Hasan.db  chatbot-Syed-Arham-Hasan.db-shm  chatbot-Syed-Arham-Hasan.db-wal  chatbot.db  langgraph_mcp_backend.py  langgraph_tool_backend.py  langraph_backend.py  langraph_database_backend.py  streamlit_frontend.py  streamlit_frontend_database-Syed-Arham-Hasan.py  streamlit_frontend_database.py  streamlit_frontend_streaming.py  streamlit_frontend_threading.py
Iterative Workflows/: X_post_generator.py
Persistance/: persistance_implementation.ipynb  persistance_theory.ipynb
Tools/: tools.py
conditional workflows/: quadratic_equation_solver.py  review_handling_workflow.py
parallel workflows/: batsman_workflow.py  essay_evaluator_workflow.py
sequential wokflows/: bmi_workflow.py  llm_workflow.py  prompt_chaining.py  test.py
